Bump org.openrewrite.recipe:rewrite-recipe-bom from 2.7.1 to 2.8.1 (#11097)
* Bump org.openrewrite.recipe:rewrite-recipe-bom from 2.7.1 to 2.8.1

Bumps [org.openrewrite.recipe:rewrite-recipe-bom](https://github.com/openrewrite/rewrite-recipe-bom) from 2.7.1 to 2.8.1.
- [Release notes](https://github.com/openrewrite/rewrite-recipe-bom/releases)
- [Commits](https://github.com/openrewrite/rewrite-recipe-bom/compare/v2.7.1...v2.8.1)

---
updated-dependencies:
- dependency-name: org.openrewrite.recipe:rewrite-recipe-bom
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Use `.getFirst()` (by OpenRewrite)

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Oliver Kopp <kopp.dev@gmail.com>