@@ -27,6 +27,6 @@ public class EntryChangedEvent extends EntriesEvent {
 
     public BibEntry getBibEntry() {
         // An entryChangedEvent should only have one BibEntry, but its parent class stores a List<BibEntry>
-        return getBibEntries().get(0);
+        return getBibEntries().getFirst();
     }
 }
